--- a/themes/raditian-free-hugo-theme/layouts/partials/header.html
+++ b/themes/raditian-free-hugo-theme/layouts/partials/header.html
@@ -4,8 +4,8 @@
       <a class="navbar-brand" href="{{ .Site.BaseURL | absURL }}">
         <img
           class="img-responsive"
-          src="img/general/logo-dark.png"
-          srcset="img/general/logo-dark.png 1x, img/general/logo-dark@2x.png 2x"
+          src="img/general/patch-logo.gif"
+          srcset="img/general/patch-logo.gif 1x, img/general/patch-logo@2x.gif 2x"
           alt="Header Logo"
         />
       </a>
