--- a/themes/raditian-free-hugo-theme/layouts/index.html
+++ b/themes/raditian-free-hugo-theme/layouts/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-	<link rel="icon" type="image/png" sizes="16x16" href="img/icon.gif">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/icon.png">
 
 
     {{ partial "head.html" . }}
