mobile text colour

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11294,7 +11294,7 @@ h5,
 h6 {
     font-weight: 700;
     line-height: normal;
-    color: #000;
+    color: #4ea8df;
     margin-bottom: 8px
 }
 
