--- a/themes/raditian-free-hugo-theme/static/css/main.css
+++ b/themes/raditian-free-hugo-theme/static/css/main.css
@@ -11294,7 +11294,7 @@ h5,
 h6 {
     font-weight: 700;
     line-height: normal;
-    color: #4ea8df;
+    color: #005b92;
     margin-bottom: 8px
 }
 
@@ -11369,7 +11369,7 @@ p+p {
     font-size: 36px;
     font-weight: 800;
     line-height: normal;
-    color: #000
+    color: #005b92
 }
 
 @media (min-width:992px) {
